test: update lottery draw dates and numbers
The existing lottery draw dates and corresponding numbers in the initialization list have been updated. The method for parsing date from the input draw numbers list has also been slightly modified for better readability and performance.